=== 2.1.0 / 2009-11-12

* Added support for :self
* Added array arguments to +can+ and +cannot+
* Put in masses of RDoc
* Added magic method support back in

=== 2.0.0 / 2009-11-11

* Rewritten from first principles! Faster, smarter, leaner and with more
  features than you can shake a very light stick at.

=== 1.0.1 / 2009-04-23

* Now sort of framework-agnostic. I say "sort of", because what I've actually
  done is just copy and paste the chunks I needed out of ActiveSupport. I guess
  the goal would be to rewrite around these, but since I basically never need
  this for anything except Rails, it seems like overkill.

=== 1.0.0 / 2009-04-23

* Gemification and README