@@ -1,3 +1,5 @@
+* Moved Credentials::ObjectExtensions to Credentials::Extensions::Object
+
 === 2.1.0 / 2009-11-12
 
 * Added support for :self
